force-app/main/default/objects/PM_Employee_Goal__c/PM_Employee_Goal__c.object-meta.xml
<CustomObject>
    <label>Employee Goal</label>
    <nameField>
        <displayFormat>EGN-{000}</displayFormat>
        <label>Employee Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>