force-app/main/default/objects/PM_Employee_Goal__c/fields/Mid_Year_Rating__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year_Rating__c</fullName>
    <label>Mid Year Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Performance_Rating</valueSetName>
    </valueSet>
</CustomField>