force-app/main/default/objects/PM_Employee_Goal__c/fields/Performance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Performance_Plan__c</fullName>
    <label>Performance Plan</label>
    <referenceTo>PM_Performance_Plan__c</referenceTo>
    <relationshipLabel>Employee Goals</relationshipLabel>
    <relationshipName>Employee_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>