force-app/main/default/objects/PM_Employee_Goal__c/fields/Supervisor_Goal__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Goal</label>
    <referenceTo>PM_Employee_Goal__c</referenceTo>
    <relationshipLabel>Employee Goals</relationshipLabel>
    <relationshipName>Employee_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>