force-app/main/default/objects/PM_Employee_Goal__c/fields/Weighted__c.field-meta.xml
<CustomField>
    <fullName>Weighted__c</fullName>
    <label>Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>