force-app/main/default/objects/PM_Employee_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mid_Year_Rating__c</columns>
    <columns>Mid_Year_Score__c</columns>
    <columns>Year_End_Rating__c</columns>
    <columns>Year_End_Score__c</columns>
    <columns>Final_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>